--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "cd src && nodemon --exec ts-node index.ts -e ts,graphql"
+    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,18 @@
   "homepage": "https://github.com/miju-park/nuber-server#readme",
   "dependencies": {
     "@types/node": "^11.13.2",
+    "graphql-yoga": "^1.18.1",
     "nodemon": "^1.18.11",
     "ts-node": "^8.0.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.4.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.5",
+    "@types/helmet": "^0.0.43",
+    "@types/morgan": "^1.7.36",
+    "cors": "^2.8.5",
+    "helmet": "^3.20.0",
+    "morgan": "^1.9.1"
   }
 }
