--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql"
+    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql",
+    "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
+    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,10 @@
     "@types/cors": "^2.8.5",
     "@types/helmet": "^0.0.43",
     "@types/morgan": "^1.7.36",
+    "babel-runtime": "^6.26.0",
     "cors": "^2.8.5",
+    "gql-merge": "^0.0.6",
+    "graphql-to-typescript": "^0.1.2",
     "helmet": "^3.20.0",
     "morgan": "^1.9.1"
   }
