--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^1.18.11",
     "ts-node": "^8.0.3",
     "tslint-config-prettier": "^1.18.0",
+    "typeorm": "^0.2.18",
     "typescript": "^3.4.2"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "gql-merge": "^0.0.6",
     "graphql-to-typescript": "^0.1.2",
     "helmet": "^3.20.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.12.1"
   }
 }
