--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/miju-park/nuber-server#readme",
   "dependencies": {
     "@types/node": "^11.13.2",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.10.0",
     "dotenv": "^8.1.0",
     "graphql-middleware": "^3.0.3",
     "graphql-tools": "^4.0.5",
     "graphql-yoga": "^1.18.1",
     "merge-graphql-schemas": "^1.7.0",
+    "node-gyp": "^5.0.3",
     "nodemon": "^1.18.11",
     "ts-node": "^8.0.3",
     "tslint-config-prettier": "^1.18.0",
@@ -34,6 +36,7 @@
     "typescript": "^3.4.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.5",
     "@types/helmet": "^0.0.43",
     "@types/morgan": "^1.7.36",
